--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-center">
             <p class="c-text">Anywhere</p>
-            <p class="c-text">any week</p>  
+            <p class="c-text">Any week</p>  
             <div class="search-icon">
                 <p class="c-text cc">Add guests</p>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; background-color:#ff385c;  height: 10px; width: 10px; padding:10px 10px; text-align:center;  border-radius:50%; stroke: white;  stroke-width: 7; overflow: visible;"><path fill="none" d="M13 24a11 11 0 1 0 0-22 11 11 0 0 0 0 22zm8-3 9 9"/></svg>
